# radiology-pt

./: .gitignore  prompt 1.0.0.txt  pyproject.toml
dicom/SER00001/: IMG00001.dcm  IMG00002.dcm  IMG00003.dcm  IMG00004.dcm  IMG00005.dcm  IMG00006.dcm  IMG00007.dcm  IMG00008.dcm  IMG00009.dcm  IMG00010.dcm  IMG00011.dcm  IMG00012.dcm  IMG00013.dcm  IMG00014.dcm  IMG00015.dcm  IMG00016.dcm  IMG00017.dcm  IMG00018.dcm  IMG00019.dcm  IMG00020.dcm  IMG00021.dcm  IMG00022.dcm  IMG00023.dcm  IMG00024.dcm  IMG00025.dcm  IMG00026.dcm  IMG00027.dcm  IMG00028.dcm  IMG00029.dcm  IMG00030.dcm  IMG00031.dcm  IMG00032.dcm  IMG00033.dcm  IMG00034.dcm  IMG00035.dcm  IMG00036.dcm  IMG00037.dcm  IMG00038.dcm  IMG00039.dcm  IMG00040.dcm  (+209 more)
dicom/SER00002/: IMG00001.dcm  IMG00002.dcm  IMG00003.dcm  IMG00004.dcm  IMG00005.dcm  IMG00006.dcm  IMG00007.dcm  IMG00008.dcm  IMG00009.dcm  IMG00010.dcm  IMG00011.dcm  IMG00012.dcm  IMG00013.dcm  IMG00014.dcm  IMG00015.dcm  IMG00016.dcm  IMG00017.dcm  IMG00018.dcm  IMG00019.dcm
dicom/SER00003/: IMG00001.dcm  IMG00002.dcm  IMG00003.dcm  IMG00004.dcm  IMG00005.dcm  IMG00006.dcm  IMG00007.dcm  IMG00008.dcm  IMG00009.dcm  IMG00010.dcm  IMG00011.dcm  IMG00012.dcm  IMG00013.dcm  IMG00014.dcm  (+84 more)
dicom_mcp/: README.md  __init__.py  dicom_ops.py  requirements.txt  server.py
examples/: call_dicom_mcp_locally.py
orchestrator/: __init__.py  __main__.py  annotate.py  config.py  context.py  debug.py  history_ui.py  mcp_bridge.py  models.py  monitor_ui.py  runner.py  terminal.py
prompt_itteration/: prompt 0.0.0.txt
tests/: test_dicom_mcp_server_integration.py
(+877 files in other folders)
